[frontend/backend] Application workflow #2 (file uploads, storage service reworked)